<resources>
    <string name="app_name">Alliance</string>
    <string name="first_name">F-NAME</string>
    <string name="last_name">L-NAME</string>
    <string name="user_name">USER NAME</string>
    <string name="email">EMAIL</string>
    <string name="address">ADDRESS</string>
    <string name="ph_no">PH NO #</string>
    <string name="password">PASSWORD</string>
    <string name="re_password">RE-PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="search_contact">Search Contact</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="add_note">ADD NOTE</string>
    <string name="location_name">Location Name</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">Save</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
</resources>