<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/alliance_logo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <EditText
                android:id="@+id/firstNameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_textfield"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/lastNameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_textfield"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="10dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/userNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/addressID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/passwordID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/rePasswordID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_textfield"
            android:ems="12"
            android:fontFamily="monospace"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/noteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="40dp"
            android:background="@color/Orange"
            android:text="@string/register" />
    </LinearLayout>

</ScrollView>